clusters/home/apps/mediabox/bazarr/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr
  namespace: mediabox
  annotations:
    external-dns.kubernetes.io/hostname: "bazarr.layertwo.dev"
    external-dns.kubernetes.io/target: "proxy-external.layertwo.dev"
    layertwo.dev/publish: "all"
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    kubernetes.io/ingress.class: external
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`bazarr.layertwo.dev`)
    kind: Rule
    services:
    - name: bazarr
      port: 6767
    middlewares:
      - name: default-headers-mediabox
      - name: mediabox-oidc
